tests/parser/bad/cmodule-transition-id-lparen-rparen-throw-bar.scilla
scilla_version 0

contract Test
()

transition protected ()
mend
